--- a/sgg/mian/src/main/java/two/jvm/常用参数.md
+++ b/sgg/mian/src/main/java/two/jvm/常用参数.md
@@ -9,9 +9,27 @@
         设置单个线程栈的大小，一般默认为512k-1024k  查看时0代表始化值
         等价于-XX:ThreadStackSize
     -Xmn
-        
+        设置年轻代大小
     -XX:MetaspaceSize
+        设置元空间大小
     -XX:+PrintGCDetails
+        打印垃圾回收信息
     -XX:SurvivorRatio
+        设置新生代中eden和s0/s1空间的比例
+        默认
+        -XX:SurvivorRatio=8    =》   Eden:s0:s1=8:1:1
+        SurvivorRatio值就是设置eden区的比例占多少，s0/s1相同
     -XX:NewRatio
+        配置年轻代与老年代在堆结构的占比
+        默认
+        -XX:NewRatio=2新生代占1，老年代2，年轻代占整个堆的1/3
+        NewRatio值就是设置老年代占比，剩下的1给新生代
     -XX:MaxTenuringThreshold
+        进入老年代的年龄
+        默认15，经过15次回收之后没被收回掉的
+        java8可以设置在 0-15 之间
+    -XX:+UseSerialGC
+        串行垃圾回收器
+    -XX:+UseParallelGC（默认）
+        并行垃圾回收器
+            
