--- a/sgg/cloudNative/src/main/resources/命令.md
+++ b/sgg/cloudNative/src/main/resources/命令.md
@@ -5,4 +5,40 @@ kubectl get nodes
 kubectl apply -f xxx
 #查看集群部署了哪些应用，运行中的应用在docker中叫容器，在k8s里面叫pod
 kubectl get pods -A
+#查看某个命名空间下的pod
+kubectl get pod -n namespace
+#强制删除 pod
+    # 1、使用命令获取pod的名字
+    kubectl get po -n NAMESPACE |grep Terminating
+    # 2、使用kubectl中的强制删除命令
+    kubectl delete pod podName -n NAMESPACE --force --grace-period=0
+
+#获取命名空间
+kubectl get ns    
+#创建命名空间
+kubectl create ns namespace
+#删除命名空间
+kubectl delete ns namespace
+#创建pod
+kubectl run mynginx --image nginx
+#查看pod详细信息
+kubectl describe pod mynginx
+#删除pod
+kubectl delete pod mynginx -n 命名空间
+#删除pod
+kubectl delete -f 配置文件.yaml
+#查看日志
+kubectl logs podName
+#每个pod - k8s都会分配一个ip
+kubectl get pod -owide
+# 使用pod的ip+pod里面运行容器的端口就可以访问了
+curl xxx
+# 创建一次部署,删除了之后，又会重新启动（自愈）
+kubectl create deployment mytomcat --image=tomcat:8.5.68
+# 查看部署
+kubectl get deploy
+# 删除部署
+kubectl delete deploy mytomcat
+# 多副本创建部署(一次部署多个pod)
+kubectl create deployment mytomcat --image=tomcat:8.5.68 --replicas=3
 ```
