--- a/sgg/cloudNative/src/main/resources/命令.md
+++ b/sgg/cloudNative/src/main/resources/命令.md
@@ -27,6 +27,8 @@ kubectl describe pod mynginx
 kubectl delete pod mynginx -n 命名空间
 #删除pod
 kubectl delete -f 配置文件.yaml
+#进入容器
+kubectl exec -it nginx-pv-demo-6ff58db964-9bztv -- /bin/bash
 #查看日志
 kubectl logs podName
 #每个pod - k8s都会分配一个ip
@@ -41,4 +43,25 @@ kubectl get deploy
 kubectl delete deploy mytomcat
 # 多副本创建部署(一次部署多个pod)
 kubectl create deployment mytomcat --image=tomcat:8.5.68 --replicas=3
+# 扩缩容
+kubectl scale deploy/mytomcat --replicas=5
+# 滚动更新
+kubectl set image deployment/mytomcat tomcat=tomcat:8.5.68 --record
+# 修改
+kubectl edit deployment/mytomcat
+# 版本回退
+  # 历史记录
+  kubectl rollout history deployment/mytomcat
+  # 回滚
+  kubectl rollout undo deploy/mytomcat --to-revision=1
+
+# service
+kubectl get service
+# 将多个pod暴露成一个服务，在节点上可以使用ip+端口访问
+# 也可以使用 服务名.所在名称空间.svc 访问（在pod内部）
+# mynginx.default.svc:8000
+# 集群内部访问
+kubectl expose deploy mynginx --port=8000 --target-port=80 --type=ClusterIP 
+# 集群外也可以访问(get service之后，后面随机生成的端口)
+kubectl expose deploy mynginx --port=8000 --target-port=80 --type=NodePort
 ```
