--- a/sgg/cloudNative/src/main/resources/命令.md
+++ b/sgg/cloudNative/src/main/resources/命令.md
@@ -9,7 +9,7 @@ kubectl get pods -A
 kubectl get pod -n namespace
 #强制删除 pod
     # 1、使用命令获取pod的名字
-    kubectl get po -n NAMESPACE |grep Terminating
+    kubectl get pod -n NAMESPACE |grep Terminating
     # 2、使用kubectl中的强制删除命令
     kubectl delete pod podName -n NAMESPACE --force --grace-period=0
 
