--- a/book/gxnmysql/src/main/resources/笔记.md
+++ b/book/gxnmysql/src/main/resources/笔记.md
@@ -1,4 +1,50 @@
-## docker命令
-```shell
-docker run -d -p 3306:3306 -e MYSQL_ROOT_PASSWORD=123456 --name gxnmysql mysql
-```
+1、mysql在隔离级别为 REPEATABLE-READ（可重复读）时，会出现幻读，但并不是任何情况下都会产生幻读。如果其它事务添加了一条记录，当前事务重新查询并不会有幻读，
+如果当前事务更新时的条件包含在其它事务添加的那条记录中，再次查询时，则会出现幻读。
+
+2、InnoDB会根据隔离级别在需要的时候自动加锁，属于隐式锁定。锁只有在commit或rollback时才会释放，InnoDB也支持通过特定语句显示锁定，
+select ... lock in share mode; （共享锁，可以和其它事务的共享锁同时存在）
+select ... for update;  (排他锁，只允许当前事务修改数据，直到事务结束,无法和其它事务的共享锁和排他锁同时存在)
+
+3、 show table status; -- 查看表的状态
+Name：
+    表名 
+Engine：
+    存储引擎 
+Row_format：
+    行的格式。对于MyISAM表，可选的值为Dynamic、Fixed或者Compressed。
+    Dynamic的行长度是可变的，一般包含可变长度的字段，如VARCHAR或BLOB。Fixed
+    的行长度则是固定的，只包含固定长度的列，如CHAR和INTEGER。Compressed 的行
+    则只在压缩表中存在。
+Rows:
+    表中的行数。对于MyISAM和其他一些存储引擎，该值是精确的，但对于InnoDB,
+    该值是估计值。
+Avg_ row_ length:
+    平均每行包含的字节数。
+Data_ length:
+    表数据的大小(以字节为单位)。
+Max_data_length:
+    表数据的最大容量，该值和存储引擎有关。
+Index_length:
+    索引的大小(以字节为单位)。
+Data_free:
+    对于MyISAM表，表示已分配但目前没有使用的空间。这部分空间包括了之前删除
+    的行，以及后续可以被INSERT利用到的空间。
+Auto_increment:
+    下一个AUTO INCREMENT 的值。
+Create_time:
+    表的创建时间。
+Update_time:
+    表数据的最后修改时间。
+Check_time:
+    使用CHECK TABLE 命令或者myisamchk工具最后一次检查表的时间。
+Collation:
+    表的默认字符集和字符列排序规则。
+Checksum:
+    如果启用，保存的是整个表的实时校验和。
+Create_ options:
+    创建表时指定的其他选项。
+Comment:
+    该列包含了一些其他的额外信息。对于MyISAM表,保存的是表在创建时带的注释。
+    对于InnoDB表，则保存的是InnoDB表空间的剩余空间信息。如果是一个视图，则
+    该列包含“VIEW" 的文本字样。
+
